<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10C6D6"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/addExpenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/jersey"
        android:text="@string/add_expense"
        android:textColor="#FFFFFF"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="168dp"
        android:layout_marginBottom="20dp"
        android:background="#CAFAFF"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/pixelify_sans"
            android:text=""
            android:textColor="#0B0000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/uploadReceiptButton"
                android:layout_width="87dp"
                android:layout_height="96dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#C0ACEB"
                android:contentDescription="@string/upload_receipt"
                android:src="@drawable/ic_upload_white" />

            <ImageButton
                android:id="@+id/cameraReceiptButton"
                android:layout_width="87dp"
                android:layout_height="96dp"
                android:backgroundTint="#C0ACEB"
                android:contentDescription="@string/capture_receipt"
                android:src="@drawable/ic_camera_white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="466dp"
        android:layout_marginBottom="20dp"
        android:background="#CAFAFF"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/jersey"
            android:text="@string/add_manually"
            android:textColor="#161515"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="#C0ACEB"
            android:padding="10dp">

            <EditText
                android:id="@+id/expenseTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#C0ACEB"
                android:fontFamily="@font/jersey"
                android:hint="@string/expense_title"
                android:padding="10dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="#C0ACEB"
            android:padding="10dp">

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="0.00"
                android:background="#C0ACEB"
                android:fontFamily="@font/jersey"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="#C0ACEB"
            android:padding="10dp">

            <Spinner
                android:id="@+id/expenseType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#C0ACEB"
                android:entries="@array/expense_types"
                android:fontFamily="@font/jersey" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:background="#C0ACEB"
            android:padding="10dp">

            <Spinner
                android:id="@+id/billFrequency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#C0ACEB"
                android:entries="@array/bill_frequencies"
                android:fontFamily="@font/jersey" />


        </LinearLayout>

        <Button
            android:id="@+id/createExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/jersey"
            android:text="@string/create"
            android:textColor="#FAFAFA"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>

