...
    <string name="full_name">Full name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="agree">I\’ve read and agree to the</string>
    <string name="privacyPolicyLink">terms of privacy policy</string>
    <string name="register">REGISTER</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="loginText">LOGIN◀</string>

    <!-- Login Activity -->
    <string name="login">Log in</string>
    <string name="loginButton">LOGIN</string>
...
    ‣ Earn Rewards: Stay motivated with badges, EXP points, and quests that make financial management a game you’ll want to win.</string>
    <string name="about_conclusion">Transform your financial future one level at a time—CashQuest makes it easy, fun, and effective. Join us today and start your quest toward financial mastery!"</string>

    <!-- Help Activity -->

    <!-- Add Expense Activitiy -->
    <string name="create">Create</string>
    <string name="amount">Amount</string>
    <string name="expense_title">Expense Title</string>
    <string name="add_manually">Add Manually</string>
    <string name="capture_receipt">Capture Receipt</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="scan_receipt">Scan a Receipt</string>
...
